--- a/gb/24/8/9/n14308097.md
+++ b/gb/24/8/9/n14308097.md
@@ -136,7 +136,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306142.md#1">奥运第11日：美国队以2金优势 领跑金牌榜</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307114.md#1">奥运麟洋配荣获金牌 桃园市图办奥运主题书展</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/12/n11108237.md#1" target="_blank">张林：疯狂中共两次差点让中国人被灭绝</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/8/n11032583.md#1" target="_blank">拥有幸福健康 澳洲民众感恩法轮功师父</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/11/n11582447.md#1" target="_blank">在中国经商 有这样一群可信赖的生意人</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
